app-svc-writer-reader-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: readwrite-pod
 labels:
  creation_method: manual
  env: poc
spec:
 containers:
 - image: douglasdb/app-svc-writer
   name: app-svc-writer
   volumeMounts:
   - name: data-json
     mountPath: /tmp/
   ports:
   - containerPort: 10250
     protocol: TCP
 - image: douglasdb/app-svc-reader
   name: app-svc-reader
   volumeMounts:
   - name: data-json
     mountPath: /tmp/
     readOnly: true
   ports:
   - containerPort: 10251
     protocol: TCP
 volumes:
 - name: data-json
   emptyDir: {}
