curl-with-ambassador.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curti-w-ambassador-pod
spec:
  containers:
  - name: main
    image: tutum/curl
    command: ['sleep', '9999999']
  - name: ambassador
    image: luksa/kubectl-proxy:1.6.2
