mongodb-persistent-storage-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod
spec:
  volumes:
  - name: mongodb-data
    hostPath:
      path: /tmp/mongodb
  containers:
  - image: mongo
    name: mongodb
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
