pod-with-host-network.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-network
spec:
  hostNetwork: false
  containers:
  - name: main
    image: alpine
    command: ['/bin/sleep', '999999']
    securityContext:
      runAsUser: 405
      readOnlyRootFilesystem: true # must read for production pods
    volumeMounts:
    - name: my-volume
      mountPath: /volume
      readOnly: false
  volumes:
  - name: my-volume
    emptyDir:
