quotes-mongosed-pod-resources-limits.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
 name: quotes-mongosed-deployment
 labels:
  app: quotes-mongosed
  tier: backend
spec:
 replicas: 2
 minReadySeconds: 10
 strategy:
  rollingUpdate:
    maxSurge: 1
    maxUnavailable: 0
  type: RollingUpdate
 selector:
  matchLabels:
    tier: backend
  matchExpressions:
    - {key: tier, operator: In, values: [backend]}
 template:
  metadata:
   labels:
    app: quotes-mongosed
    tier: backend
  spec:
   containers:
   - name: quotes-mongosed
     resources: # Burstable QoS classification
       limits:
         cpu: 1
         memory: 50Mi #MebiBit Mi -> 3.xxx MegaBytes
       requests:
        cpu: 200m
        memory: 20Mi #MebiBit Mi -> 3.xxx MegaBytes
     image: douglasdb/quotes-mongosed
     readinessProbe:
      periodSeconds: 2
      httpGet:
        path: /
        port: 10254
     ports:
     - containerPort: 10254
