flaskweb-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskweb-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30124
  selector:
    app: flaskweb-app
    tier: backend
