flaskweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskweb-app-service
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: flaskweb-app
    tier: backend
