postgres-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  # type: ExternalName
  # externalName: 192.168.1.34
  ports:
  - port: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
subsets:
  - addresses:
    - ip: 192.168.1.34
    ports:
    - port: 5432
