quotes-mongosed-service-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes-mongosed-service
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  ports:
  - port: 10254
    targetPort: 10254
  selector:
    app: quotes-mongosed
    tier: backend
