quotes-mongosed-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes-mongosed-svc
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  ports:
  - port: 10254
    targetPort: 10254
  selector:
    app: quotes-mongosed
    tier: backend
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: quotes-mongosed-svc
  namespace: myproject
spec:
  host: quotes-mongosed-svc-myproject.10.0.75.2.nip.io
  to:
    kind: Service
    name: quotes-mongosed-svc
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: quotes-mongosed-svc-myproject.10.0.75.2.nip.io
      routerName: router
      wildcardPolicy: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
 name: quotes-mongosed-dp
 labels:
  app: quotes-mongosed
  tier: backend
spec:
 replicas: 2
 minReadySeconds: 10
 strategy:
  rollingUpdate:
    maxSurge: 1
    maxUnavailable: 0
  type: RollingUpdate
 selector:
  matchLabels:
    tier: backend
  matchExpressions:
    - {key: tier, operator: In, values: [backend]}
 template:
  metadata:
   labels:
    app: quotes-mongosed
    tier: backend
  spec:
   containers:
   - name: quotes-mongosed
     resources:
       requests:
        cpu: 200m
        memory: 10Mi
     image: douglasdb/quotes-mongosed
     readinessProbe:
      periodSeconds: 2
      httpGet:
        path: /
        port: 10254
     ports:
     - containerPort: 10254
